Enable coverage reports.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ cache: yarn
 
 script:
   - yarn lint
-  - yarn test
+  - yarn test --coverage
+
+after_script: yarn codecov
 
 notifications:
   email:
