--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.15",
     "@types/react-dom": "^16.0.5",
+    "codecov": "^3.0.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
