--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.1.0",
+    "axios": "^0.18.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts-ts": "2.16.0",
@@ -18,9 +19,11 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^22.2.3",
+    "@types/nock": "^9.1.3",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.15",
     "@types/react-dom": "^16.0.5",
@@ -28,8 +31,9 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
+    "nock": "^9.3.0",
     "prettier": "^1.13.4",
     "pretty-quick": "^1.6.0",
-    "typescript": "2.8.4"
+    "typescript": "^2.9.1"
   }
 }
