--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^22.2.3",
-    "@types/nock": "^9.1.3",
     "@types/node": "^10.3.0",
     "@types/react": "^16.3.15",
     "@types/react-dom": "^16.0.5",
+    "axios-mock-adapter": "^1.15.0",
     "codecov": "^3.0.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
-    "nock": "^9.3.0",
     "prettier": "^1.13.4",
     "pretty-quick": "^1.6.0",
     "typescript": "^2.9.1"
